RESOLVED FIXED209519
REGRESSION(r258314): Leak in MediaPlayerPrivateMediaSourceAVFObjC::updateLastPixelBuffer()
https://bugs.webkit.org/show_bug.cgi?id=209519
Summary REGRESSION(r258314): Leak in MediaPlayerPrivateMediaSourceAVFObjC::updateLast...
Jer Noble
Reported 2020-03-24 16:03:24 PDT
REGRESSION(r258314): Leak in MediaPlayerPrivateMediaSourceAVFObjC::updateLastPixelBuffer()
Attachments
Patch (2.00 KB, patch)
2020-03-24 16:05 PDT, Jer Noble
eric.carlson: review+
Patch for landing (2.00 KB, patch)
2020-03-24 16:47 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2020-03-24 16:04:58 PDT
Jer Noble
Comment 2 2020-03-24 16:05:50 PDT
Eric Carlson
Comment 3 2020-03-24 16:09:42 PDT
Comment on attachment 394433 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=394433&action=review > Source/WebCore/ChangeLog:8 > + Obey the "create" rule and adopt the results of -copyPixelBufferForSourceTime:sourceTimeForDisplay:. Maybe `"copy" rule` would be more appropriate given the method name?
Jer Noble
Comment 4 2020-03-24 16:47:34 PDT
Created attachment 394440 [details] Patch for landing
EWS
Comment 5 2020-03-24 17:18:15 PDT
Committed r258962: <https://trac.webkit.org/changeset/258962> All reviewed patches have been landed. Closing bug and clearing flags on attachment 394440 [details].
Note You need to log in before you can comment on or make changes to this bug.